# franki

./: README.md  pyproject.toml
src/franki/: __main__.py  ankigen.py  clipboard.py  larousse.py  logic.py  wordminer.py
